--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,8 @@
   },
   "require": {
     "container-interop/container-interop": "^1.1"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "5.5.*"
   }
 }
